# rust-omnisearch-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  cobertura.xml  crates.js  deny.toml  docker-compose.yml  help.html  justfile  search-index.js  settings.html  src-files.js  validate.sh
.github/: dependabot.yml
.github/workflows/: ci-cd.yml  ci.yml  release.yml
benches/: search_benchmarks.rs
demo/: final_demo.sh
docs/: configuration.md  development.md  providers.md
monitoring/: prometheus.yml
omnisearch_mcp/: all.html  constant.VERSION.html  fn.initialize.html  index.html  macro.create_simple_provider!.html  macro.create_simple_provider.html  macro.handle_provider_http_error!.html  macro.handle_provider_http_error.html  sidebar-items.js  struct.OmnisearchClient.html  struct.SearchRequest.html  struct.SearchResponse.html
omnisearch_mcp/client/: index.html  sidebar-items.js  struct.OmnisearchClient.html  struct.SearchRequest.html  struct.SearchResponse.html
omnisearch_mcp/common/: index.html  sidebar-items.js
omnisearch_mcp/common/cache/: index.html  sidebar-items.js  struct.CacheManager.html  struct.MemoryCache.html  trait.CacheProvider.html  type.CacheKey.html  type.CacheValue.html
omnisearch_mcp/common/circuit_breaker/: enum.CircuitState.html  fn.call_with_circuit_breaker.html  fn.get_circuit_breaker_stats.html  fn.reset_circuit_breaker.html  index.html  sidebar-items.js  static.CIRCUIT_BREAKER_MANAGER.html  struct.CircuitBreaker.html  struct.CircuitBreakerManager.html  struct.CircuitBreakerStats.html  trait.CircuitBreakerProvider.html
omnisearch_mcp/common/health/: enum.CheckStatus.html  enum.ServiceStatus.html  fn.check_liveness.html  fn.check_readiness.html  fn.get_health_status.html  index.html  sidebar-items.js  static.HEALTH_CHECKER.html  struct.HealthCheck.html  struct.HealthChecker.html  struct.HealthMetrics.html  struct.HealthStatus.html
omnisearch_mcp/common/http/: fn.create_http_client.html  fn.handle_http_error.html  index.html  sidebar-items.js
omnisearch_mcp/common/macros/: index.html
omnisearch_mcp/common/metrics/: fn.get_all_provider_stats.html  fn.get_metrics_middleware.html  fn.get_provider_stats.html  fn.record_request_metrics.html  fn.setup_metrics_exporter.html  index.html  sidebar-items.js  static.METRICS_COLLECTOR.html  struct.MetricsCollector.html  struct.MetricsMiddleware.html  struct.ProviderStats.html  struct.RequestMetrics.html
omnisearch_mcp/common/provider_base/: index.html  sidebar-items.js  struct.ProviderUtils.html  trait.ApiKeyProvider.html  trait.MultiCredentialProvider.html
omnisearch_mcp/common/provider_factory/: index.html  sidebar-items.js  struct.ProviderFactory.html
omnisearch_mcp/common/rate_limiter/: fn.check_rate_limit.html  fn.get_limiter_stats.html  fn.wait_for_rate_limit.html  index.html  sidebar-items.js  static.RATE_LIMITER_MANAGER.html  struct.RateLimiterManager.html  struct.RateLimiterStats.html  type.ProviderRateLimiter.html
omnisearch_mcp/common/types/: enum.ErrorType.html  index.html  sidebar-items.js  struct.BaseSearchParams.html  struct.Enhancement.html  struct.EnhancementResult.html  struct.EnhancementSource.html  struct.ProcessingMetadata.html  struct.ProcessingResult.html  struct.ProviderError.html  struct.RawContent.html  struct.SearchResult.html  trait.EnhancementProvider.html  trait.ProcessingProvider.html  trait.SearchProvider.html
omnisearch_mcp/common/validation/: constant.MAX_DOMAIN_COUNT.html  constant.MAX_DOMAIN_LENGTH.html  constant.MAX_QUERY_LENGTH.html  constant.MAX_RESULTS_LIMIT.html  constant.MIN_RESULTS_LIMIT.html  fn.format_validation_errors.html  fn.has_excessive_repetition.html  fn.is_suspicious_domain.html  index.html  (+14 more)
omnisearch_mcp/config/: enum.CacheType.html  fn.get_provider_api_key.html  fn.validate_config.html  index.html  sidebar-items.js  static.CONFIG.html  struct.BrightDataProviderConfig.html  struct.CacheConfig.html  struct.CircuitBreakerConfig.html  struct.Config.html  struct.GoogleProviderConfig.html  struct.LoggingConfig.html  struct.MetricsConfig.html  struct.ProviderConfig.html  struct.ProvidersConfig.html  struct.RateLimitingConfig.html  struct.RedditProviderConfig.html  struct.ServerConfig.html
omnisearch_mcp/providers/: fn.create_providers.html  fn.initialize_providers.html  index.html  sidebar-items.js
omnisearch_mcp/server/: index.html  sidebar-items.js
scripts/: production_readiness_validator.sh
search.desc/omnisearch_mcp/: omnisearch_mcp-desc-0-.js  omnisearch_mcp-desc-1-.js  omnisearch_mcp-desc-2-.js  omnisearch_mcp-desc-3-.js
src/: client.rs  lib.rs  main.rs
src/common/: cache.rs  circuit_breaker.rs  health.rs  http.rs  macros.rs  metrics.rs  mod.rs  provider_base.rs  provider_factory.rs  rate_limiter.rs  types.rs  validation.rs
src/config/: mod.rs
src/omnisearch_mcp/: client.rs.html  lib.rs.html
src/providers/: mod.rs
src/server/: handlers.rs  mod.rs  tools.rs
tests/: application_flow_test.rs  baidu_comprehensive_test.rs  baidu_error_handling_test.rs  baidu_provider_test.rs  brightdata_comprehensive_test.rs  brightdata_provider_test.rs  comprehensive_config_validation_test.rs  comprehensive_error_handling_test.rs  duckduckgo_comprehensive_test.rs  duckduckgo_provider_test.rs  error_handling_test.rs  exa_comprehensive_test.rs  exa_provider_test.rs  final_integration_test.rs  google_comprehensive_test.rs  google_error_handling_test.rs  google_provider_test.rs  http_utilities_extended_test.rs  http_utils_test.rs  integration_comprehensive.rs  integration_comprehensive.rs.disabled  integration_tests.rs  main_app_test.rs  main_application_test.rs  provider_base_test.rs  provider_comprehensive_test.rs  provider_factory_extended_test.rs  provider_factory_test.rs  provider_interface_test.rs  provider_tests.rs  reddit_comprehensive_test.rs  reddit_provider_test.rs  search_types_test.rs  server_components_test.rs  server_handlers_test.rs  simple_tool_registry_test.rs  tavily_comprehensive_test.rs  test_utils.rs
trait.impl/lazy_static/: trait.LazyStatic.js
(+127 files in other folders)
