[package]
name = "omnisearch-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP server for integrating Omnisearch with LLMs"
license = "MIT"
keywords = [
    "mcp",
    "model-context-protocol",
    "search",
    "ai",
    "web-search",
    "tavily",
    "brave-search",
    "kagi",
    "perplexity",
    "jina-ai",
    "firecrawl",
    "llm",
    "content-processing",
    "summarization",
    "fact-verification",
    "content-enrichment",
    "url-reader",
    "pdf-processing",
    "image-captioning",
    "unified-search",
    "multi-provider",
    "web-crawling",
    "site-mapping",
    "data-extraction",
    "web-interactions"
]
categories = ["command-line-utilities"]
repository = "https://github.com/your-username/omnisearch-mcp"
homepage = "https://github.com/your-username/omnisearch-mcp"
documentation = "https://github.com/your-username/omnisearch-mcp"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
rust-mcp-sdk = { version = "0.6", features = ["server"] }
async-trait = "0.1"
once_cell = "1.19"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt"] }
futures = "0.3"
