[package]
name = "omnisearch-mcp"
version = "0.1.0"
edition = "2021"
authors = ["hongkongkiwi <andy@hkkw.me>"]
description = "A comprehensive MCP server providing unified search, content processing, and AI-powered analysis capabilities"
license = "MIT"
readme = "README.md"
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
]
rust-version = "1.70"
keywords = ["mcp", "search", "ai", "llm", "web-search"]
categories = ["command-line-utilities", "web-programming", "api-bindings"]
repository = "https://github.com/hongkongkiwi/rust-omnisearch-mcp"
homepage = "https://github.com/hongkongkiwi/rust-omnisearch-mcp"
documentation = "https://github.com/hongkongkiwi/rust-omnisearch-mcp#readme"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
rust-mcp-sdk = { version = "0.6", features = ["server"], optional = true }
async-trait = "0.1"
once_cell = "1.19"

# Binary target (MCP server)
[[bin]]
name = "omnisearch-mcp"
path = "src/main.rs"
required-features = ["server"]

# Library target (for use as a crate)
[lib]
name = "omnisearch_mcp"
path = "src/lib.rs"

# Features for different use cases
[features]
default = ["server", "all-providers"]

# Core server functionality
server = ["dep:rust-mcp-sdk"]

# Provider groups
all-providers = ["search-providers", "processing-providers", "enhancement-providers"]
search-providers = ["tavily", "google", "reddit", "duckduckgo", "baidu", "brightdata", "exa"]
processing-providers = ["firecrawl", "jina", "kagi"]
enhancement-providers = ["jina-grounding", "kagi-enrichment"]

# Individual providers (for selective compilation)
tavily = []
google = []
reddit = []
duckduckgo = []
baidu = []
brightdata = []
exa = []
firecrawl = []
jina = []
kagi = []
jina-grounding = ["jina"]
kagi-enrichment = ["kagi"]

# Development and testing features
testing = []
documentation = []

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt"] }
futures = "0.3"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
