[package]
name = "omnisearch-mcp"
version = "0.1.0"
edition = "2021"
authors = ["hongkongkiwi <andy@hkkw.me>"]
description = "A comprehensive MCP server providing unified search, content processing, and AI-powered analysis capabilities"
license = "MIT"
readme = "README.md"
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
]
rust-version = "1.70"
keywords = ["mcp", "search", "ai", "llm", "web-search"]
categories = ["command-line-utilities", "web-programming", "api-bindings"]
repository = "https://github.com/hongkongkiwi/rust-omnisearch-mcp"
homepage = "https://github.com/hongkongkiwi/rust-omnisearch-mcp"
documentation = "https://github.com/hongkongkiwi/rust-omnisearch-mcp#readme"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
eyre = "0.6"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
rust-mcp-sdk = { version = "0.6", features = ["server"], optional = true }
async-trait = "0.1"
once_cell = "1.19"

# Configuration management
figment = { version = "0.10", features = ["toml", "yaml", "env"] }

# Caching
redis = { version = "0.24", optional = true }
moka = { version = "0.12", features = ["future"] }

# Rate limiting
tower = { version = "0.4", features = ["limit", "buffer"] }
governor = "0.6"

# Metrics and observability
metrics = "0.22"
metrics-exporter-prometheus = { version = "0.13", optional = true }

# Circuit breaker
failsafe = "1.2"

# Input validation
validator = { version = "0.20", features = ["derive"] }
regex = "1.10"
lazy_static = "1.4"

# Health checks
serde_yaml = "0.9"


# Binary target (MCP server)
[[bin]]
name = "omnisearch-mcp"
path = "src/main.rs"
required-features = ["server"]

# Library target (for use as a crate)
[lib]
name = "omnisearch_mcp"
path = "src/lib.rs"

# Features for different use cases
[features]
default = ["server", "all-providers", "caching", "metrics"]

# Core server functionality
server = ["dep:rust-mcp-sdk"]

# Provider groups
all-providers = ["search-providers", "processing-providers", "enhancement-providers"]
search-providers = ["tavily", "google", "reddit", "duckduckgo", "baidu", "brightdata", "exa"]
processing-providers = ["firecrawl", "jina", "kagi"]
enhancement-providers = ["jina-grounding", "kagi-enrichment"]

# Individual providers (for selective compilation)
tavily = []
google = []
reddit = []
duckduckgo = []
baidu = []
brightdata = []
exa = []
firecrawl = []
jina = []
kagi = []
jina-grounding = ["jina"]
kagi-enrichment = ["kagi"]

# Optional features
caching = ["redis"]
metrics = ["dep:metrics-exporter-prometheus"]

# Development and testing features
testing = []
documentation = []

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt"] }
futures = "0.3"
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
mockito = "1.3"
tempfile = "3.8"
fastrand = "2.0"


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
